# Rentalia_MX_Web

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  MANUAL_FLUJO_DESARROLLO.md  README.md  docker-compose.yml  sync_rentalia.sh
admin/: Dockerfile  middleware.ts  package-lock.json  package.json
admin/app/: globals.css  layout.tsx  page.tsx
admin/components/: AmenidadGeneralForm.tsx  AmenidadesConfigForm.tsx  AmenidadesPerfilesManager.tsx  AvisoPrivacidadForm.tsx  BarrioFotosManager.tsx  ComoFuncionaForm.tsx  ComunidadManager.tsx  FaqsManager.tsx  FooterContactoForm.tsx  HomeConfigForm.tsx  LugaresManager.tsx  NosotrosManager.tsx  RoomForm.tsx  Sidebar.tsx  TerminosCondicionesForm.tsx  UbicacionForm.tsx
admin/lib/: amenities.ts
backend/: Dockerfile  pyproject.toml
backend/api/: README.md
backend/app/: db.py  main.py
backend/tests/: test_reviews.py
backend/worker/: README.md
backend_node/: package-lock.json  package.json  server.js
backend_node/api/: visitas.js
contexto/: dominio.md
database/init/: 001_init.sql
database/migrations/: 001_habitaciones.sql  002_create_habitaciones.sql  003_setup_habitaciones_supabase.sql  004_create_reviews_internal.sql  005_update_reviews_anonymous.sql  006_rooms_admin.sql  007_location_amenities.sql  009_habitaciones_extras.sql  (+13 more)
estructura_proyecto/: arquitectura.md
frontend/: index.html
frontend_backup_2025-10-02-18-43/: agendar_visita.html  alternativas.html  experiencias.html  faq.html  index.html
nginx/: default.conf
scripts/: build.sh  check_db.js  dev-all.sh  dev.sh  migrate.sh  seed.sh
(+123 files in other folders)
