[tool.poetry]
name = "site-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
gunicorn = "^22.0.0"
pymysql = "^1.1.0"
sqlalchemy = "^2.0.0"
python-dotenv = "^1.0.0"
supabase = "^2.0.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
